--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "netflix-clone",
-    "homepage":"/.",
     "main":"index.js",
     "version": "1.0.1",
     "license": "MIT",
@@ -12,20 +11,13 @@
         "build": "cd client && npm run build",
         "start-client": "cd client && npm run start",
         "install-client": "cd client && npm install",
-        "heroku-postbuild": "npm run install-client && npm run build && npm install -g serve && serve -s build",
+        "heroku-postbuild": "npm run install-client && npm run build",
         "server": "node index.js",
         "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
         "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start-client\""
     },
     "dependencies": {
         "concurrently": "^6.0.2",
-        "cors": "^2.8.5",
-        "crypto-js": "^4.0.0",
-        "dotenv": "^10.0.0",
-        "express": "^4.17.1",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.13.2",
-        "nodemon": "^2.0.9",
         "path": "^0.12.7"
     }
 }
