--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@netflix-clone/client",
+  "homepage": ".",
   "version": "0.1.0",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
