--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
+    "serve": "^12.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "install-client":"npm install",
+    "install-client": "npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -31,8 +32,8 @@
   },
   "engine": {
     "node": "14.17.1",
-    "npm":"7.20.3"
-},
+    "npm": "7.20.3"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
