--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && serve -s build",
     "install-client": "npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
