--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "install-server": "npm install",
         "install-client": "cd client && npm install",
         "heroku-postbuild": "npm run install-client && npm run build",
-        "server": "node index.js",
+        "server": "nodemon index.js",
         "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
         "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start-client\""
     },
