Update material-ui - add play and pause for video info component

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "netflix-clone",
-    "main":"index.js",
+    "main": "index.js",
     "version": "1.0.1",
     "license": "MIT",
     "engine": {
         "node": "14.17.1",
-        "npm":"7.20.3"
+        "npm": "7.20.3"
     },
     "scripts": {
         "build": "cd client && npm run build",
@@ -22,10 +22,11 @@
         "cors": "^2.8.5",
         "crypto-js": "^4.0.0",
         "dotenv": "^10.0.0",
+        "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.13.2",
         "nodemon": "^2.0.9",
-        "express": "^4.17.1",
+        "npm": "^7.24.1",
         "path": "^0.12.7"
     }
 }
